<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stUpDownSlot" Id="{fb0b16aa-f34a-4d43-b8b3-aae91a2ea24b}">
    <Declaration><![CDATA[TYPE stUpDownSlot :
STRUCT
//R//
	error_code				:INT;	//	
	state				:INT;	//		
	sensor_up		    :BOOL;
	sensor_down	        :BOOL;
	Error					:BOOL;
//W//
	Initialize			:BOOL;
	MoveDown			:BOOL;
	MoveUp				:BOOL;
	Setoff				:BOOL;
	timeout_up			:LREAL:=5;//S
	timeout_down		:LREAL:=5;//S
	extra_down_time		:LREAL:=0.1;//S
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>